[package]
name = "climberhub-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.16"
rocket = { version = "=0.5.0-rc.2", default-features = false, features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
serde = { version = "1.0", features = ["derive"] }
tokio = "1.27.0"
toml = "0.7.3"
